# kraken2metasploit

./: Cargo.toml  config.toml
src/: cli.rs  config.rs  main.rs
